--- a/style/header.css
+++ b/style/header.css
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   height: 100vh;
-  background: rgb(139, 138, 138);
+  background-image: url(/img/texture3.jpg);
 }
 
 nav {
@@ -34,7 +34,7 @@ nav ul {
 nav ul li a{
   font-size: 2rem;
   font-weight: 500;
-  color: black;
+  color: white;
 }
 
 .toggle {
@@ -71,6 +71,7 @@ nav ul li a{
   display: block;
   bottom: 0;
   right: 0;
+  border-bottom: 1px solid white;
 }
 .principal-section figure img {
   width: 100%;
@@ -94,7 +95,8 @@ h1 {
   text-decoration: underline;
 }
 
-.principal-section a.cv {
+.principal-section a.cv,
+.about-section a.cv {
   color: black;
   padding: 1rem 2rem;
   border-radius: 1rem;
