--- a/style/main.css
+++ b/style/main.css
@@ -38,7 +38,6 @@ h2 {
   background-image: url(/img/textura4.jpg);
   padding: 10rem 0rem;
   text-align: center;
-  border-top: 1px solid white;
 }
 
 .grid-work {
@@ -91,7 +90,7 @@ h2 {
 .grid-work {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .more-work {
@@ -105,4 +104,60 @@ h2 {
   font-size: 1.8rem;
   font-weight: 500;
   color: black;
+}
+
+/*----------------- CONTACT SECTION --------------------*/
+
+.contact-section {
+  padding: 10rem 0rem;
+  text-align: center;
+  border: 1px solid white;
+}
+
+.contact-section form label{
+  display: block;
+  font-weight: 500;
+  font-family: "arvo";
+  font-size: 1.8rem;
+  text-align: left;
+}
+.contact-section form {
+  width: min(50rem, 90%);
+  margin: 0rem auto;
+  text-align: center;
+  padding: 2rem;
+  background: black;
+  border-radius: 2rem;
+}
+.contact-section form div {
+  margin-bottom: 2rem;
+}
+
+.contact-section label,
+.contact-section input,
+textarea {
+  width: 100%;
+}
+
+.contact-section input,
+textarea {
+  color: black;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+  font-size: 1.4rem;
+}
+.contact-section input:focus,
+textarea:focus {
+  outline: none;
+}
+
+.contact-section form button {
+  background: white;
+  color: black;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: .7rem;
+  font-size: 1.6rem;
+  font-weight: 500;
 }
