--- a/style/media.css
+++ b/style/media.css
@@ -56,7 +56,7 @@
 }
 
 @media (max-width: 800px) {
-  .toggle {
+  #toggle {
     display: flex;
   }
   nav ul {
@@ -86,9 +86,6 @@
   .work button:first-of-type {
     margin-bottom: 1rem;
   }
-}
-
-@media (max-width: 300px) {
   .logo figure {
     display: none;
   }
