--- a/style/header.css
+++ b/style/header.css
@@ -87,11 +87,26 @@ nav ul li:hover hr {
   position: fixed;
   height: 100vh;
   width: 100vw;
-  background: gray;
+  background-image: url(/img/texture3.jpg);
+  background-position: left;
   z-index: 10;
   left: 0;
   bottom: 0;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#toggle.active .menu-hidden ul {
+  display: block;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+#toggle.active .menu-hidden ul li a{
+  font-size: 4rem;
 }
 
 /*----------------- PRINCIPAL SECTION --------------------*/
