--- a/style/general.css
+++ b/style/general.css
@@ -17,7 +17,8 @@
 }
 
 body {
-  width: 100%;  
+  width: 100%;
+  background: black;
 }
 
 .container {
@@ -34,10 +35,4 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: white;
   border-radius: 2rem;
-}
-
-.background {
-  position: fixed;
-  z-index: -10;
-  filter: blur(4px);
 }
