--- a/style/header.css
+++ b/style/header.css
@@ -2,6 +2,7 @@ header {
   width: 100%;
   height: 100vh;
   background-image: url(/img/texture3.jpg);
+  border-bottom: 1px solid white;
 }
 
 nav {
