--- a/style/footer.css
+++ b/style/footer.css
@@ -2,6 +2,8 @@ footer {
   background: black;
   padding: 5rem 0rem;
   text-align: center;
+  animation: show .2s 1.2s forwards;
+  opacity: 0;
 }
 
 footer h3 {
