--- a/style/animations.css
+++ b/style/animations.css
@@ -8,3 +8,12 @@
     opacity: 1;
   }
 }
+
+@keyframes left {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
